2003-04-07 Marcel Telka <telka@users.sourceforge.net>

	* include/ddk/winddk.h (KIRQL): Typedef as UCHAR. not ULONG.

2003-03-30  Hans E. Molin  <kvasi@users.sourceforge.net>

	* include/olectl.h (OleLoadPicturePath): Correct prototype.

2003-03-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/uuid.c (IID_IHTML*): Move definitions to...
	* lib/mshtml-uuid.c: New file.
	* lib/Makefile.in: Add mshtml-uuid.o to libuuid.a

2003-03-30  Michael Sazonov  <traip@comset.net>

	* lib/uuid.c (IID_IHTML*): Add new GUID definitions.
	* include/mshtml.h (IHTMLElementCollection, IHTMLLinkElement,
	IHTMLImgElement): Add intetface definitions.

2003-03-29  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (ANIMATE_CLASS,HOTKEY_CLASS,PROGRESS_CLASS,
	STATUSCLASSNAME,TOOLBARCLASSNAME,TOOLTIPS_CLASS,TRACKBAR_CLASS,
	UPDOWN_CLASS,WC_COMBOBOXEX,WC_HEADER,WC_IPADDRESS,WC_LISTVIEW,
	WC_TABCONTROL,WC_TREEVIEW): Move UNICODE mappings out of
	RC_INVOKED guard. 
 	(WC_PAGESCROLLER,WC_NATIVEFONTCTL,WC_BUTTON,WC_STATIC,WC_EDIT,
	WC_LISTBOX,WC_COMBOBOX,WC_SCROLLBAR): Add defines.

2003-03-28  Bang Jun-Young  <junyoung@netbsd.org>

	* include/winnt.h (WAITORTIMERCALLBACKFUNC): Add typedef.

2003-03-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/secext.h (GetComputerObjectName[AW],GetUserNameEx[AW],
	TranslateName[AW]): Add prototypes.
	* lib/sec32.def (GetComputerObjectName[AW],GetUserNameEx[AW],
	TranslateName[AW]): Add stubs.
	* lib/test.c: Include secext.h.

2003-03-27  Vladimir Michl  <michlv@users.sourceforge.net>

	* include/ddk/ndis.h (NdisAllocateSpinLock,NdisFreeSpinLock,
	NdisAcquireSpinLock,NdisReleaseSpinLock,NdisDprAcquireSpinLock,
	NdisDprReleaseSpinLock): Change macro argument from SpinLock to
	_SpinLock.

2003-03-26  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version to 2.4.
	* Makefile.in: Ditto.

2003-03-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ddk/batclass.h (BATTERY_REPORTING_SCALE)